# SmartCalc

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/backend/: controllerCalc.h
src/backend/model/: calcCreditData.cc  calcCreditData.h  calcData.h  calcDebitData.cc  calcDebitData.h  calcGrapfData.cc  calcGrapfData.h  calculatePostfix.cc  calculatePostfix.h  modelCalc.h  parseString.cc  parseString.h  postfixNotation.cc  postfixNotation.h  tokens.h
src/qt/SmartCalc_v2_0/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: test_calc.cc
